--- a/website/_posts/2025-02-24-About-Me.md
+++ b/website/_posts/2025-02-24-About-Me.md
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+---
+layout: post
+title:  "About Me"
+---
+
+![GMU](/Files/Images/gmuPond.jpg)
 <html>
 <head>
 <style>
@@ -7,17 +12,16 @@ table, td {
   border-collapse: collapse;
 }
 </style>
-<img src="./Files/Images/gmuPond.jpg" alt="Cannot display image"style="width:1024px; height:500px;">
 </head>
 <body>
-<h1>Hello, website of fochoada<h1>
-<p>Made through GitHub Pages</p>
-
+<h1>
+<p>Made through Jekyll, GitHub Pages</p>
+</h1>
 
 <table style="width:50%">
   <tr>
     <td>Name</td>
-	<td>Francis Ochoada</td>
+	<td>Francis O</td>
   </tr>
   <tr>
 	<td>Introduction</td>
@@ -28,8 +32,6 @@ table, td {
 	<td>Programming, gardening, 3D modeling</td>
   </tr>	
 </table>
-<p>Jekyll does not want to upload properly to GitHub, so here is a fish: <p/>
-<img src="./Files/Images/spinningFish.gif" alt="Cannot display image"style="width:1250px; height:400px;">
 </body>
-
 </html>
+![gif](/Files/Images/spinningFish.gif)
