--- a/_posts/2025-02-24-About-Me.md
+++ b/_posts/2025-02-24-About-Me.md
@@ -3,7 +3,7 @@ layout: post
 title:  "About Me"
 ---
 
-![GMU](/Files/Images/gmuPond.jpg)
+![GMU](/assets/Images/gmuPond.jpg)
 <html>
 <head>
 <style>
@@ -34,4 +34,4 @@ table, td {
 </table>
 </body>
 </html>
-![gif](/Files/Images/spinningFish.gif)
+![gif](/assets/Images/spinningFish.gif)
