--- a/_posts/2025-04-26-Ethics.md
+++ b/_posts/2025-04-26-Ethics.md
@@ -3,4 +3,69 @@ title: Ethics
 layout: post
 ---
 
-This is ethics page
+This is the ethics page. <br />
+![IEEE](/assets/Images/IEEELogo.png) <br />
+From the IEEE(1999), <br />
+<p style="margin-left: 30px;">Software engineers shall commit themselves to 
+making the analysis, specification, design, development, testing and maintenance of software 
+a beneficial and respected profession. 
+In accordance with their commitment to the 
+health, safety and welfare of the public, 
+software engineers shall adhere to the following Eight Principles:</p>
+
+<table border=0 cellpadding=0 cellspacing=0 width=475 style='border-collapse:
+ collapse;table-layout:fixed;width:357pt'>
+ <col width=108 style='mso-width-source:userset;mso-width-alt:3770;width:81pt'>
+ <col width=367 style='mso-width-source:userset;mso-width-alt:12823;width:276pt'>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 width=108 style='height:14.5pt;width:81pt'>first principle</td>
+  <td width=367 style='width:276pt'>Act within the public interest</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>second principle</td>
+  <td>Act with the best interest of clients &amp; employers</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Third principle</td>
+  <td>Products meet highest standards</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Fourth principle</td>
+  <td>maintain integrity</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Fifth principle</td>
+  <td>promote ethical management</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Sixth principle</td>
+  <td>Advance the profession within the public's interest</td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Seventh principle</td>
+  <td>Fair &amp; supportive of colleagues<span
+  style='mso-spacerun:yes'> </span></td>
+ </tr>
+ <tr height=19 style='height:14.5pt'>
+  <td height=19 style='height:14.5pt'>Eight principle</td>
+  <td>Participate in lifelong learning and promote ethical sollutions</td>
+ </tr>
+ <tr height=0 style='display:none'>
+  <td width=108 style='width:81pt'></td>
+  <td width=367 style='width:276pt'></td>
+ </tr>
+</table>
+![MVU](/assets/Images/MVUCampus.jpg)
+For data science ethics, Maryville University (2025) offers similar guidelines:
+* Act with integrity, humility, and honesty
+* Hold themselves and others accountable
+* Promote transparency
+* Remain informed about developments in data science and data management
+* Respect confidentiality and privacy
+* Respect individuals, communities, and the public
+* Uphold applicable ethical standards, professional practices, statutes, and regulations
+
+Refrences: <br />
+IEEE Computer Society. (1999). Code of Ethics. IEEE. https://www.computer.org/education/code-of-ethics <br />
+Maryville University. (2025). Data science ethics: Issues and strategies. 
+https://online.maryville.edu/online-masters-degrees/data-science/careers/data-science-ethics-issues-and-strategies/
