--- a/_posts/2025-04-26-Home.md
+++ b/_posts/2025-04-26-Home.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Home Page"
 ---
 
-![GMU](/Files/Images/gmuPond.jpg)
+![GMU](/assets/Images/gmuPond.jpg)
 <html>
 <head>
 <style>
@@ -20,4 +20,4 @@ table, td {
 <p>This is Home Page</p>
 </body>
 </html>
-![gif](/Files/Images/spinningFish.gif)
+![gif](/assets/Images/spinningFish.gif)
